<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/edit_meeting_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="30dp"
        android:backgroundTint="#037d8a"
        android:hint="@string/saisir_un_titre"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:paddingStart="35dp"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_datePicker"
        app:layout_constraintTop_toBottomOf="@id/toolbar2"
        tools:ignore="RtlSymmetry" />

    <ImageButton
        android:id="@+id/btn_datePicker"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        android:src="@drawable/date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_meeting_name" />

    <TextView
        android:id="@+id/txt_date_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/date"
        android:textColor="#003036"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/btn_datePicker"
        app:layout_constraintStart_toEndOf="@+id/btn_datePicker" />

    <ImageButton
        android:id="@+id/btn_start_timePicker"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:background="@android:color/transparent"
        android:src="@drawable/time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_datePicker" />

    <TextView
        android:id="@+id/txt_start_time_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/rectangle_shape"
        android:padding="7dp"
        android:text="@string/start_hour"
        android:textColor="#003036"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_start_timePicker"
        app:layout_constraintStart_toEndOf="@+id/btn_start_timePicker" />

    <ImageButton
        android:id="@+id/btn_end_timePicker"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:background="@android:color/transparent"
        android:src="@drawable/time"
        app:layout_constraintEnd_toStartOf="@+id/txt_end_time_picker"
        app:layout_constraintStart_toEndOf="@id/txt_start_time_picker"
        app:layout_constraintTop_toBottomOf="@id/btn_datePicker" />

    <TextView
        android:id="@+id/txt_end_time_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginVertical="20dp"
        android:background="@drawable/rectangle_shape"
        android:padding="7dp"
        android:text="@string/hour_end"
        android:textColor="#003036"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_start_timePicker"
        app:layout_constraintStart_toEndOf="@+id/btn_end_timePicker" />

    <View
        android:id="@+id/v1"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="#037d8a"
        app:layout_constraintBottom_toTopOf="@+id/btn_add_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_start_time_picker" />


    <ImageView
        android:id="@+id/image_contact"
        android:layout_width="56dp"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="6dp"
        android:background="@null"
        android:padding="10dp"
        android:src="@drawable/people"
        app:layout_constraintBottom_toTopOf="@+id/cardview_email_textview"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_add_email"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/rectangle_shape"
        android:gravity="center"
        android:text="@string/add_email"
        app:layout_constraintBottom_toTopOf="@id/v2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/v1" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview_email_textview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_add_email">

        <TextView
            android:id="@+id/email_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textAlignment="center"
            android:textColor="#000"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <View
        android:id="@+id/v2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="#037d8a"
        app:layout_constraintBottom_toBottomOf="@+id/cardview_email_textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/spinner"
        app:layout_constraintVertical_bias="0.596" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginVertical="25dp"
        app:layout_constraintTop_toBottomOf="@id/v2"
        tools:listitem="@layout/room_spinner" />

    <View
        android:id="@+id/v3"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="#037d8a"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#1692cc"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/AppToolbar"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/btn_shape"
        android:paddingHorizontal="15dp"
        android:text="@string/save"
        android:textColor="#FEFEFE"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/v3" />

</androidx.constraintlayout.widget.ConstraintLayout>