<resources>
    <string name="app_name">Lamzone</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="titre_toolbar">Mes Réunions</string>
    <string name="title_activity_create_reunion">CreateReunion</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>

        <string name="spiner_name">Spinner Example</string>
    <string name="ajouter_reunion_textview">Ajouter une réunion</string>
    <string name="emptyData">Il faut remplir tous les champs !</string>
    <string name="anavailableRoom">Salle occupée</string>
    <string name="saisir_un_titre">Saisir un titre</string>
    <string name="save">enregistrer</string>
    <string name="add_email">Ajouter des participants</string>
    <string name="date">Date de la Réunion</string>
    <string name="start_hour">Début </string>
    <string name="hour_end">Fin</string>
    <string name="par_date">Par Date</string>
    <string name="par_salle">Par salle</string>
    <string name="reinitialiser">Réinitialiser</string>
    <string name="meeting_subject">Meeting subject</string>
    <string name="terminer">Terminer</string>
    <string name="ajouter_des_participants">Ajouter des participants</string>
    <string name="ajouter_un_participant">Ajouter un participant</string>
    <string name="ajouter">AJOUTER</string>
    <string name="endTime">endTime</string>
    <string name="starttime">startTime</string>
    <string name="mail_of_member">Mail of Member</string>
    <string name="date_txt">date</string>
    <string name="red">salle rouge</string>
    <string name="vérifier_heure">Verifiez l\'heure</string>
    <string name="valid_email_address">"adresse valide "</string>
    <string name="invalid_email_address">Adresse Invalide</string>
    <string name="filter">Filtrer</string>
    <string name="purple">salle violette</string>
    <string name="green">salle verte</string>
    <string name="grey">salle grise</string>
    <string name="blue">salle bleue</string>
    <string name="salle_choisie">SALLE CHOISIE</string>
    <string name="detail_roomname">detail_roomName</string>
    <string name="detail_date">detail_date</string>
    <string name="detail_reunionname">detail_reunionName</string>
    <string name="participants">Participants</string>
    <string name="ok">ok</string>
    <string name="heure">Heure:</string>
    <string name="_00_00">00 : 00</string>
    <string name="username">UserName</string>
</resources>


