<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bcg"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/text_view_user_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#1692cc"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/ajouter_des_participants"
                android:textColor="#FFF"
                android:textSize="24sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <EditText
            android:id="@+id/edit_text_user_email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:autofillHints=" "
            android:gravity="center"
            android:hint="@string/ajouter_un_participant"
            android:inputType="textEmailAddress"
            android:padding="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_user_email" />

        <Button
            android:id="@+id/btn_new_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:background="#157DAE"
            android:enabled="false"
            android:text="@string/ajouter"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/text_view_user_email"
            app:layout_constraintStart_toEndOf="@+id/edit_text_user_email"
            app:layout_constraintTop_toBottomOf="@+id/text_view_user_email"

            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/user_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="30dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_new_user"
            tools:listitem="@layout/content_user_rv" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btn_save_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@null"
        android:text="@string/terminer"
        android:textColor="#991d34" />
</LinearLayout>